--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "author": "",
   "dependencies": {
+    "events": "^1.1.1",
+    "flux": "^3.1.2",
     "html-webpack-plugin": "^2.28.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
